--- a/HandTrack-Scrolling/HandTrack-Scrolling.vcxproj
+++ b/HandTrack-Scrolling/HandTrack-Scrolling.vcxproj
@@ -76,13 +76,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\Projects\opencv\build\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\Projects\opencv_contrib_cuda_4.9.0_win_amd64\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\Projects\opencv\build\x64\vc16\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);opencv_world4100.lib;opencv_world4100d.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\Projects\opencv_contrib_cuda_4.9.0_win_amd64\x64\vc17\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);opencv_world490.lib;opencv_world490d.lib;opencv_img_hash490d.lib;opencv_img_hash490.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -107,13 +107,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>F:\Projects\opencv\build\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>F:\Projects\opencv_contrib_cuda_4.9.0_win_amd64\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\Projects\opencv\build\x64\vc16\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);opencv_world4100.lib;opencv_world4100d.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\Projects\opencv_contrib_cuda_4.9.0_win_amd64\x64\vc17\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CoreLibraryDependencies);%(AdditionalDependencies);opencv_world490.lib;opencv_world490d.lib;opencv_img_hash490d.lib;opencv_img_hash490.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
